# RosneftTest

./: CMakeLists.txt  main.cpp  polyline.csv  records.csv
